[gd_scene load_steps=2 format=3 uid="uid://c8x7q2j5w4r9"]

[ext_resource type="Script" path="res://scripts/character/spum_modern/SPUM_Rig.gd" id="1_Rig"]

[node name="SPUM_Rig" type="Node2D"]
script = ExtResource("1_Rig")

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="Hip" type="Bone2D" parent="Skeleton2D"]
position = Vector2(0, -8)
rest = Transform2D(1, 0, 0, 1, 0, -8)

[node name="BodySprite" type="Sprite2D" parent="Skeleton2D/Hip"]
position = Vector2(0, -6)

[node name="PantSprite" type="Sprite2D" parent="Skeleton2D/Hip"]
position = Vector2(0, 4)

[node name="LegL" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2(-5, 8)
rest = Transform2D(1, 0, 0, 1, -5, 8)
z_index = -1

[node name="FootLSprite" type="Sprite2D" parent="Skeleton2D/Hip/LegL"]

[node name="LegR" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2(5, 8)
rest = Transform2D(1, 0, 0, 1, 5, 8)
z_index = -1

[node name="FootRSprite" type="Sprite2D" parent="Skeleton2D/Hip/LegR"]

[node name="Spine" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2(0, -10)
rest = Transform2D(1, 0, 0, 1, 0, -10)

[node name="ClothSprite" type="Sprite2D" parent="Skeleton2D/Hip/Spine"]

[node name="Head" type="Bone2D" parent="Skeleton2D/Hip/Spine"]
position = Vector2(0, -12)
rest = Transform2D(1, 0, 0, 1, 0, -12)

[node name="HeadSprite" type="Sprite2D" parent="Skeleton2D/Hip/Spine/Head"]

[node name="FaceHair" type="Sprite2D" parent="Skeleton2D/Hip/Spine/Head"]

[node name="Hair" type="Sprite2D" parent="Skeleton2D/Hip/Spine/Head"]

[node name="Items" type="Node2D" parent="Skeleton2D/Hip/Spine/Head"]
position = Vector2(-3, -2)

[node name="ArmL" type="Bone2D" parent="Skeleton2D/Hip/Spine"]
position = Vector2(-12, -4)
rest = Transform2D(1, 0, 0, 1, -12, -4)
z_index = -1

[node name="ArmLSprite" type="Sprite2D" parent="Skeleton2D/Hip/Spine/ArmL"]

[node name="ArmR" type="Bone2D" parent="Skeleton2D/Hip/Spine"]
position = Vector2(12, -4)
rest = Transform2D(1, 0, 0, 1, 12, -4)
z_index = 1

[node name="ArmRSprite" type="Sprite2D" parent="Skeleton2D/Hip/Spine/ArmR"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
